--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -1,17 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Home page</title>
-		<script src="/script.js" type="module"></script>
-		<link rel="stylesheet" href="/styles.css" />
-	</head>
-	<body>
-		<div
-			class="view"
-			id="output"
-		>
-<h1>Hello world!</h1>
-</div>
-	</body>
+  <head>
+    <title>Home page</title>
+    <script src="/script.js" type="module"></script>
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
+  <body>
+    <div class="view" id="output">
+      <h1>Hello world!</h1>
+    </div>
+  </body>
 </html>
