Move build scripts to example

--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Error 404</title>
+    <script src="/web.js" type="module"></script>
     <script src="/script.js" type="module"></script>
     <link rel="stylesheet" href="/styles.css" />
   </head>
