Allow routing to file extensions, and rm unnecessary prettying deps

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home page</title>
-    <script src="/web.js" type="module"></script>
-    <script src="/script.js" type="module"></script>
-    <link rel="stylesheet" href="/styles.css" />
-  </head>
-  <body>
-    <div class="view" id="output">
-      <h1>Hello world!</h1>
-    </div>
-  </body>
+
+<head>
+	<title>Home page</title>
+	<script src="/web.js" type="module"></script>
+	<script src="/script.js" type="module"></script>
+	<link rel="stylesheet" href="/styles.css" />
+</head>
+
+<body>
+	<div class="view" id="output">
+		<h1>Hello world!</h1>
+		<p> <a href="/404.html" target="_self"> Oh no </a> </p>
+	</div>
+</body>
+
 </html>
