--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -15,12 +15,12 @@
 	</div>
 	<nav>
 		<ul>
+			<li> <a href="/bundled" target="_self"> Go /bundled </a> </li>
+			<li> <a href="/bundled-fallback" target="_self"> Go /bundled-fallback </a> </li>
 			<li> <a href="/404.html" target="_self"> Go /404.html </a> </li>
 			<li> <a href="/" target="_self"> Go / </a> </li>
-			<li> <a href="test/t0/bundle/fallback" target="_self"> Go test/t0/bundle/fallback </a> </li>
-			<li> <a href="test/t1/bundle" target="_self"> Go test/t1/bundle </a> </li>
-			<li> <a href="test/t2/dynamic/fallback" target="_self"> Go test/t2/dynamic/fallback </a> </li>
-			<li> <a href="test/t3/dynamic" target="_self"> Go test/t3/dynamic </a> </li>
+			<li> <a href="/split" target="_self"> Go /split </a> </li>
+			<li> <a href="/split-fallback" target="_self"> Go /split-fallback </a> </li>
 		</ul>
 	</nav>
 </body>
