--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -15,12 +15,12 @@
 	</div>
 	<nav>
 		<ul>
-			<li> <a href="/bundled/" target="_self"> Go /bundled/ </a> </li>
-			<li> <a href="/bundled-fallback/" target="_self"> Go /bundled-fallback/ </a> </li>
-			<li> <a href="/404.html" target="_self"> Go /404.html </a> </li>
-			<li> <a href="/" target="_self"> Go / </a> </li>
-			<li> <a href="/split/" target="_self"> Go /split/ </a> </li>
-			<li> <a href="/split-fallback/" target="_self"> Go /split-fallback/ </a> </li>
+			<li> <a href="/bundled/" onclick="" target="_self"> Go /bundled/ </a> </li>
+			<li> <a href="/bundled-fallback/" onclick="" target="_self"> Go /bundled-fallback/ </a> </li>
+			<li> <a href="/404.html" onclick="" target="_self"> Go /404.html </a> </li>
+			<li> <a href="/" onclick="" target="_self"> Go / </a> </li>
+			<li> <a href="/split/" onclick="" target="_self"> Go /split/ </a> </li>
+			<li> <a href="/split-fallback/" onclick="" target="_self"> Go /split-fallback/ </a> </li>
 		</ul>
 	</nav>
 </body>
