--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -12,8 +12,8 @@
 <body>
 	<div class="view" id="output">
 		<h1>Hello world!</h1>
-		<div> <input oninput="" max="10" placeholder="Type here" type="text" /> <span>0 / 10 Remaining</span> </div>
-		<div> <input oninput="" max="10" placeholder="Type here" type="text" /> <span>0 / 10 Remaining</span> </div>
+		<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
+		<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
 	</div>
 	<nav>
 		<ul>
