--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div class="view" id="output">
-		<h1>Hello world!</h1>
+		<h1>Hello world! This is a variable</h1>
 		<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
 		<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
 	</div>
