--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -11,18 +11,18 @@
 
 <body>
 	<div class="view" id="output">
-		<h1>Hello world! This is a variable</h1>
-		<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
-		<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
+		<h1>Hello world!</h1>
+		<markdown># Headline 1 This is a variable## This is a variable <div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
+			<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
 	</div>
 	<nav>
 		<ul>
-			<li> <a href="/bundled/" onclick="" target="_self"> Go /bundled/ </a> </li>
-			<li> <a href="/bundled-fallback/" onclick="" target="_self"> Go /bundled-fallback/ </a> </li>
 			<li> <a href="/404.html" onclick="" target="_self"> Go /404.html </a> </li>
 			<li> <a href="/" onclick="" target="_self"> Go / </a> </li>
+			<li> <a href="/nosplit/" onclick="" target="_self"> Go /nosplit/ </a> </li>
+			<li> <a href="/nosplit-nofallback/" onclick="" target="_self"> Go /nosplit-nofallback/ </a> </li>
 			<li> <a href="/split/" onclick="" target="_self"> Go /split/ </a> </li>
-			<li> <a href="/split-fallback/" onclick="" target="_self"> Go /split-fallback/ </a> </li>
+			<li> <a href="/split-nofallback/" onclick="" target="_self"> Go /split-nofallback/ </a> </li>
 		</ul>
 	</nav>
 </body>
