MD works but is a little gross

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -12,8 +12,39 @@
 <body>
 	<div class="view" id="output">
 		<h1>Hello world!</h1>
-		<markdown># Headline 1 This is a variable## This is a variable <div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
+		<h1>Headline 1</h1>
+		<h2>undefined</h2>
+		<div>
 			<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
+		</div>
+		<div>
+			<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
+		</div>
+		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
+		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
+		<h2>Headline 2</h2>
+		<blockquote>
+			<p>Excepteur sint occaecat cupidatat non proident.</p>
+		</blockquote>
+		<p>Joseph&#39;s coat was red and yellow and green and brown and scarlet.</p>
+		<ul>
+			<li> ut aliquip ex</li>
+			<li> ea commodo consequat.<ul>
+					<li> Duis aute</li>
+					<li> irure dolor in</li>
+				</ul>
+			</li>
+			<li> ut aliquip ex</li>
+		</ul>
+		<ol>
+			<li> ut aliquip ex</li>
+			<li> ea commodo consequat.<ol>
+					<li> Duis aute</li>
+					<li> irure dolor in</li>
+				</ol>
+			</li>
+			<li> ut aliquip ex</li>
+		</ol>
 	</div>
 	<nav>
 		<ul>
