Works but should use diff strategy for tmp

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -13,7 +13,7 @@
 	<div class="view" id="output">
 		<h1>Hello world!</h1>
 		<h1>Headline 1</h1>
-		<h2>undefined</h2>
+		<h2>This is a variable</h2>
 		<div>
 			<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
 		</div>
