--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -3,11 +3,11 @@
 
 <head>
 	<title>Error 404</title>
-	<base href="/" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<base href="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="/web.js" type="module"></script>
 	<script src="/script.js" type="module"></script>
-	<link rel="stylesheet" href="/styles.css" />
+	<link rel="stylesheet" href="/styles.css">
 	<style>
 		h1 {
 			color: red;
@@ -17,13 +17,15 @@
 </head>
 
 <body>
-	<main id="output">
+	<nav>
 		<ul>
 			<li> <a href="/404.html" onclick="" target="_self"> Go /404.html </a> </li>
 			<li> <a href="/" onclick="" target="_self"> Go / </a> </li>
 			<li> <a href="/ssg/no/" onclick="" target="_self"> Go /ssg/no/ </a> </li>
 			<li> <a href="/ssg/yes/" onclick="" target="_self"> Go /ssg/yes/ </a> </li>
 		</ul>
+	</nav>
+	<main>
 		<h1>404 page :(</h1>
 	</main>
 </body>
