--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<title>Home page</title>
-	<base href="/" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<base href="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="/web.js" type="module"></script>
 	<script src="/script.js" type="module"></script>
-	<link rel="stylesheet" href="/styles.css" />
+	<link rel="stylesheet" href="/styles.css">
 	<style>
 		h1 {
 			color: red;
@@ -17,21 +17,23 @@
 </head>
 
 <body>
-	<main id="output">
+	<nav>
 		<ul>
 			<li> <a href="/404.html" onclick="" target="_self"> Go /404.html </a> </li>
 			<li> <a href="/" onclick="" target="_self"> Go / </a> </li>
 			<li> <a href="/ssg/no/" onclick="" target="_self"> Go /ssg/no/ </a> </li>
 			<li> <a href="/ssg/yes/" onclick="" target="_self"> Go /ssg/yes/ </a> </li>
 		</ul>
+	</nav>
+	<main>
 		<h1>Hello world!</h1>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
 		<div>
-			<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
+			<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value=""> <span> 10 / 10 Remaining </span> </div>
 		</div>
 		<div>
-			<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value="" /> <span> 10 / 10 Remaining </span> </div>
+			<div> <input oninput="" maxlength="10" placeholder="Type here" type="text" value=""> <span> 10 / 10 Remaining </span> </div>
 		</div>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
