Supports nested markdown

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -39,7 +39,7 @@
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
 		<h2>Headline 2</h2>
 		<blockquote>
-			<p>Excepteur sint occaecat cupidatat non proident.</p>
+			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
 		</blockquote>
 		<p>Joseph&#39;s coat was red and yellow and green and brown and scarlet.</p>
 		<ul>
