External CSS files

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -7,12 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="/script.js" type="module"></script>
 	<link rel="stylesheet" href="/styles.css">
-	<style>
-		h1 {
-			color: red;
-		}
-
-	</style>
+	<link rel="stylesheet" href="/index.html.css">
+	<style data-component="Textbox-0"></style>
+	<style data-component="IndexPage-0"></style>
 </head>
 
 <body>
