--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-	<title>Error 404</title>
+	<title>SSG yes</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="/script.js" type="module"></script>
 	<link rel="stylesheet" href="/styles.css">
-	<style data-component="ErrorPage-0"></style>
+	<link rel="stylesheet" href="/ssg/yes/index.html.css">
+	<style data-component="NoSSGPage-0"></style>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 		</ul>
 	</nav>
 	<main>
-		<h1>404 page :(</h1>
+		<h1>SSG yes</h1>
 	</main>
 </body>
 
