--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -17,12 +17,17 @@
 		<ul>
 			<li> <a href="/404.html" onclick="" target="_self"> Go /404.html </a> </li>
 			<li> <a href="/" onclick="" target="_self"> Go / </a> </li>
+			<li> <a href="/#jump1" onclick="" target="_self"> Go /#jump1 </a> </li>
+			<li> <a href="/#jump2" onclick="" target="_self"> Go /#jump2 </a> </li>
 			<li> <a href="/ssg/no/" onclick="" target="_self"> Go /ssg/no/ </a> </li>
 			<li> <a href="/ssg/yes/" onclick="" target="_self"> Go /ssg/yes/ </a> </li>
+			<li> <a href="/ssg/yes/#jump1" onclick="" target="_self"> Go /ssg/yes/#jump1 </a> </li>
+			<li> <a href="/ssg/yes/#jump2" onclick="" target="_self"> Go /ssg/yes/#jump2 </a> </li>
 		</ul>
 	</nav>
 	<main>
 		<h1>Hello world!</h1>
+		<div id="jump1">Jump 1</div>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
 		<div>
@@ -56,6 +61,7 @@
 			</li>
 			<li> ut aliquip ex</li>
 		</ol>
+		<div id="jump2">Jump 2</div>
 	</main>
 </body>
 
