--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -16,12 +16,18 @@
 		<ul>
 			<li> <a href="/404.html" onclick="" target="_self"> Go /404.html </a> </li>
 			<li> <a href="/" onclick="" target="_self"> Go / </a> </li>
+			<li> <a href="/#jump1" onclick="" target="_self"> Go /#jump1 </a> </li>
+			<li> <a href="/#jump2" onclick="" target="_self"> Go /#jump2 </a> </li>
 			<li> <a href="/ssg/no/" onclick="" target="_self"> Go /ssg/no/ </a> </li>
 			<li> <a href="/ssg/yes/" onclick="" target="_self"> Go /ssg/yes/ </a> </li>
+			<li> <a href="/ssg/yes/#jump1" onclick="" target="_self"> Go /ssg/yes/#jump1 </a> </li>
+			<li> <a href="/ssg/yes/#jump2" onclick="" target="_self"> Go /ssg/yes/#jump2 </a> </li>
 		</ul>
 	</nav>
 	<main>
 		<h1>SSG yes</h1>
+		<div id="jump1">Jump 1</div>
+		<div id="jump2">Jump 2</div>
 	</main>
 </body>
 
