--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -8,7 +8,7 @@
 	<script src="/script.js" type="module"></script>
 	<link rel="stylesheet" href="/styles.css">
 	<link rel="stylesheet" href="/ssg/yes/index.html.css">
-	<style data-component="NoSSGPage-0"></style>
+	<style data-component="YesSSGPage-0"></style>
 </head>
 
 <body>
