--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -4,24 +4,23 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="/script.js" type="module"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
 	<link rel="stylesheet" href="/styles.css">
 	<link rel="stylesheet" href="/ssg/yes/index.html.css">
-	<style data-component="YesSSGPage-0"></style>
+	<style data-component="YesSSGPage"></style>
 </head>
 
 <body>
 	<nav>
 		<ul>
-			<li> <a href="/404.html" onclick="" target="_self"> Go /404.html </a> </li>
-			<li> <a href="/" onclick="" target="_self"> Go / </a> </li>
-			<li> <a href="/#jump1" onclick="" target="_self"> Go /#jump1 </a> </li>
-			<li> <a href="/#jump2" onclick="" target="_self"> Go /#jump2 </a> </li>
-			<li> <a href="/ssg/no/" onclick="" target="_self"> Go /ssg/no/ </a> </li>
-			<li> <a href="/ssg/yes/" onclick="" target="_self"> Go /ssg/yes/ </a> </li>
-			<li> <a href="/ssg/yes/#jump1" onclick="" target="_self"> Go /ssg/yes/#jump1 </a> </li>
-			<li> <a href="/ssg/yes/#jump2" onclick="" target="_self"> Go /ssg/yes/#jump2 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.6934880810098516']=[this,'AppRouteComponent','error404','Go error404']"></script> <a href="/404.html" onclick="this.instances.get('0.6934880810098516').onClick(event,'/404.html')" target="_self"> Go error404 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.3098340888755089']=[this,'AppRouteComponent','home','Go home']"></script> <a href="/" onclick="this.instances.get('0.3098340888755089').onClick(event,'/')" target="_self"> Go home </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.33115502173275546']=[this,'AppRouteComponent','homeJump1','Go homeJump1']"></script> <a href="/#jump1" onclick="this.instances.get('0.33115502173275546').onClick(event,'/#jump1')" target="_self"> Go homeJump1 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.09993684385450674']=[this,'AppRouteComponent','homeJump2','Go homeJump2']"></script> <a href="/#jump2" onclick="this.instances.get('0.09993684385450674').onClick(event,'/#jump2')" target="_self"> Go homeJump2 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.8666530328614133']=[this,'AppRouteComponent','ssgNo','Go ssgNo']"></script> <a href="/ssg/no/" onclick="this.instances.get('0.8666530328614133').onClick(event,'/ssg/no/')" target="_self"> Go ssgNo </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.5042021597519815']=[this,'AppRouteComponent','ssgYes','Go ssgYes']"></script> <a href="/ssg/yes/" onclick="this.instances.get('0.5042021597519815').onClick(event,'/ssg/yes/')" target="_self"> Go ssgYes </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.8357099933757934']=[this,'AppRouteComponent','ssgYesJump1','Go ssgYesJump1']"></script> <a href="/ssg/yes/#jump1" onclick="this.instances.get('0.8357099933757934').onClick(event,'/ssg/yes/#jump1')" target="_self"> Go ssgYesJump1 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.9751835676287932']=[this,'AppRouteComponent','ssgYesJump2','Go ssgYesJump2']"></script> <a href="/ssg/yes/#jump2" onclick="this.instances.get('0.9751835676287932').onClick(event,'/ssg/yes/#jump2')" target="_self"> Go ssgYesJump2 </a> </li>
 		</ul>
 	</nav>
 	<main>
