Fixed circular dependency issue with routes

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -9,19 +9,20 @@
 	<link rel="stylesheet" href="/index.html.css">
 	<style data-component="IndexPage"></style>
 	<style data-component="Textbox"></style>
+	<style data-component="AppRouteComponent"></style>
 </head>
 
 <body>
 	<nav>
 		<ul>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.7138063980828011']=[this,'AppRouteComponent','error404','Go error404']"></script> <a href="/404.html" onclick="this.closest('[data-AppRouteComponent=&quot;0.7138063980828011&quot;]').instances.get('0.7138063980828011').onClick(event,'/404.html')" target="_self"> Go error404 </a> </li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.01471365331417207']=[this,'AppRouteComponent','home','Go home']"></script> <a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;0.01471365331417207&quot;]').instances.get('0.01471365331417207').onClick(event,'/')" target="_self"> Go home </a> </li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.13172096980349335']=[this,'AppRouteComponent','homeJump1','Go homeJump1']"></script> <a href="/#jump1" onclick="this.closest('[data-AppRouteComponent=&quot;0.13172096980349335&quot;]').instances.get('0.13172096980349335').onClick(event,'/#jump1')" target="_self"> Go homeJump1 </a> </li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.8062049057904366']=[this,'AppRouteComponent','homeJump2','Go homeJump2']"></script> <a href="/#jump2" onclick="this.closest('[data-AppRouteComponent=&quot;0.8062049057904366&quot;]').instances.get('0.8062049057904366').onClick(event,'/#jump2')" target="_self"> Go homeJump2 </a> </li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.6903063503206934']=[this,'AppRouteComponent','ssgNo','Go ssgNo']"></script> <a href="/ssg/no/" onclick="this.closest('[data-AppRouteComponent=&quot;0.6903063503206934&quot;]').instances.get('0.6903063503206934').onClick(event,'/ssg/no/')" target="_self"> Go ssgNo </a> </li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.9252564395014744']=[this,'AppRouteComponent','ssgYes','Go ssgYes']"></script> <a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;0.9252564395014744&quot;]').instances.get('0.9252564395014744').onClick(event,'/ssg/yes/')" target="_self"> Go ssgYes </a> </li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.9564312289930026']=[this,'AppRouteComponent','ssgYesJump1','Go ssgYesJump1']"></script> <a href="/ssg/yes/#jump1" onclick="this.closest('[data-AppRouteComponent=&quot;0.9564312289930026&quot;]').instances.get('0.9564312289930026').onClick(event,'/ssg/yes/#jump1')" target="_self"> Go ssgYesJump1 </a> </li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.32595351871812883']=[this,'AppRouteComponent','ssgYesJump2','Go ssgYesJump2']"></script> <a href="/ssg/yes/#jump2" onclick="this.closest('[data-AppRouteComponent=&quot;0.32595351871812883&quot;]').instances.get('0.32595351871812883').onClick(event,'/ssg/yes/#jump2')" target="_self"> Go ssgYesJump2 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.6346922043795129']=[this,'AppRouteComponent','error404','Go error404']"></script> <a href="/404.html" onclick="this.closest('[data-AppRouteComponent=&quot;0.6346922043795129&quot;]').instances.get('0.6346922043795129').onClick(event,'/404.html')" target="_self"> Go error404 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.10237959471749769']=[this,'AppRouteComponent','home','Go home']"></script> <a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;0.10237959471749769&quot;]').instances.get('0.10237959471749769').onClick(event,'/')" target="_self"> Go home </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.8929981425560969']=[this,'AppRouteComponent','homeJump1','Go homeJump1']"></script> <a href="/#jump1" onclick="this.closest('[data-AppRouteComponent=&quot;0.8929981425560969&quot;]').instances.get('0.8929981425560969').onClick(event,'/#jump1')" target="_self"> Go homeJump1 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.23331853983966355']=[this,'AppRouteComponent','homeJump2','Go homeJump2']"></script> <a href="/#jump2" onclick="this.closest('[data-AppRouteComponent=&quot;0.23331853983966355&quot;]').instances.get('0.23331853983966355').onClick(event,'/#jump2')" target="_self"> Go homeJump2 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.4647260503141124']=[this,'AppRouteComponent','ssgNo','Go ssgNo']"></script> <a href="/ssg/no/" onclick="this.closest('[data-AppRouteComponent=&quot;0.4647260503141124&quot;]').instances.get('0.4647260503141124').onClick(event,'/ssg/no/')" target="_self"> Go ssgNo </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.862562724189539']=[this,'AppRouteComponent','ssgYes','Go ssgYes']"></script> <a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;0.862562724189539&quot;]').instances.get('0.862562724189539').onClick(event,'/ssg/yes/')" target="_self"> Go ssgYes </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.7144142523378563']=[this,'AppRouteComponent','ssgYesJump1','Go ssgYesJump1']"></script> <a href="/ssg/yes/#jump1" onclick="this.closest('[data-AppRouteComponent=&quot;0.7144142523378563&quot;]').instances.get('0.7144142523378563').onClick(event,'/ssg/yes/#jump1')" target="_self"> Go ssgYesJump1 </a> </li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.36972897378197156']=[this,'AppRouteComponent','ssgYesJump2','Go ssgYesJump2']"></script> <a href="/ssg/yes/#jump2" onclick="this.closest('[data-AppRouteComponent=&quot;0.36972897378197156&quot;]').instances.get('0.36972897378197156').onClick(event,'/ssg/yes/#jump2')" target="_self"> Go ssgYesJump2 </a> </li>
 		</ul>
 	</nav>
 	<main>
@@ -29,14 +30,15 @@
 		<div id="jump1">Jump 1</div>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
-		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.9188841272288384']=[this,'Textbox',10,'foo']"></script>
-			<div> <input oninput="this.closest('[data-Textbox=&quot;0.9188841272288384&quot;]').instances.get('0.9188841272288384').handleInput(event,)" maxlength="10" placeholder="Type here" type="text" value="foo"> <span> 7 / 10 Remaining </span> </div>
+		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.40528576736673605']=[this,'Textbox',10,'foo']"></script>
+			<div> <input oninput="this.closest('[data-Textbox=&quot;0.40528576736673605&quot;]').instances.get('0.40528576736673605').handleInput(event,)" maxlength="10" placeholder="Type here" type="text" value="foo"> <span> 7 / 10 Remaining </span> </div>
 		</div>
-		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.1156094543488968']=[this,'Textbox',777]"></script>
-			<div> <input oninput="this.closest('[data-Textbox=&quot;0.1156094543488968&quot;]').instances.get('0.1156094543488968').handleInput(event,)" maxlength="777" placeholder="Type here" type="text" value=""> <span> 777 / 777 Remaining </span> </div>
+		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.5902168278280493']=[this,'Textbox',777]"></script>
+			<div> <input oninput="this.closest('[data-Textbox=&quot;0.5902168278280493&quot;]').instances.get('0.5902168278280493').handleInput(event,)" maxlength="777" placeholder="Type here" type="text" value=""> <span> 777 / 777 Remaining </span> </div>
 		</div>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
+		<p><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.2884149221013872']=[this,'AppRouteComponent','home']"></script> <a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;0.2884149221013872&quot;]').instances.get('0.2884149221013872').onClick(event,'/')" target="_self"> </a> </p>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
