--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -15,14 +15,14 @@
 <body>
 	<nav>
 		<ul>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.010540361279924637']=[this,'AppRouteComponent','error404','Go error404']"></script><a href="/404.html" onclick="this.closest('[data-AppRouteComponent=&quot;0.010540361279924637&quot;]').instances.get('0.010540361279924637').onClick(event,)">Go error404</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.4230688961251021']=[this,'AppRouteComponent','home','Go home']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;0.4230688961251021&quot;]').instances.get('0.4230688961251021').onClick(event,)">Go home</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.17894092351319757']=[this,'AppRouteComponent','homeJump1','Go homeJump1']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;0.17894092351319757&quot;]').instances.get('0.17894092351319757').onClick(event,)">Go homeJump1</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.8975300361736007']=[this,'AppRouteComponent','homeJump2','Go homeJump2']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;0.8975300361736007&quot;]').instances.get('0.8975300361736007').onClick(event,)">Go homeJump2</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.56012013900904']=[this,'AppRouteComponent','ssgNo','Go ssgNo']"></script><a href="/ssg/no" onclick="this.closest('[data-AppRouteComponent=&quot;0.56012013900904&quot;]').instances.get('0.56012013900904').onClick(event,)">Go ssgNo</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.11725836463323236']=[this,'AppRouteComponent','ssgYes','Go ssgYes']"></script><a href="/ssg/yes" onclick="this.closest('[data-AppRouteComponent=&quot;0.11725836463323236&quot;]').instances.get('0.11725836463323236').onClick(event,)">Go ssgYes</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.16905042256626945']=[this,'AppRouteComponent','ssgYesJump1','Go ssgYesJump1']"></script><a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;0.16905042256626945&quot;]').instances.get('0.16905042256626945').onClick(event,)">Go ssgYesJump1</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.24716948011244888']=[this,'AppRouteComponent','ssgYesJump2','Go ssgYesJump2']"></script><a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;0.24716948011244888&quot;]').instances.get('0.24716948011244888').onClick(event,)">Go ssgYesJump2</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','error404','Go error404']"></script><a href="/404.html" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go error404</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','home','Go home']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go home</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','homeJump1','Go homeJump1']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go homeJump1</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','homeJump2','Go homeJump2']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go homeJump2</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','ssgNo','Go ssgNo']"></script><a href="/ssg/no" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgNo</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','ssgYes','Go ssgYes']"></script><a href="/ssg/yes" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYes</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','ssgYesJump1','Go ssgYesJump1']"></script><a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYesJump1</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','ssgYesJump2','Go ssgYesJump2']"></script><a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
@@ -30,15 +30,15 @@
 		<div id="jump1">Jump 1</div>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
-		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.42560317600068687']=[this,'Textbox',10,'foo']"></script>
-			<div> <input oninput="this.closest('[data-Textbox=&quot;0.42560317600068687&quot;]').instances.get('0.42560317600068687').handleInput(event,)" maxlength="10" placeholder="Type here" type="text" value="foo"> <span> 7 / 10 Remaining </span> </div>
+		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'Textbox',10,'foo']"></script>
+			<div> <input oninput="this.closest('[data-Textbox=&quot;/UID/&quot;]').instances.get('/UID/').handleInput(event,)" maxlength="10" placeholder="Type here" type="text" value="foo"> <span> 7 / 10 Remaining </span> </div>
 		</div>
-		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.17722764043498684']=[this,'Textbox',777]"></script>
-			<div> <input oninput="this.closest('[data-Textbox=&quot;0.17722764043498684&quot;]').instances.get('0.17722764043498684').handleInput(event,)" maxlength="777" placeholder="Type here" type="text" value=""> <span> 777 / 777 Remaining </span> </div>
+		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'Textbox',777]"></script>
+			<div> <input oninput="this.closest('[data-Textbox=&quot;/UID/&quot;]').instances.get('/UID/').handleInput(event,)" maxlength="777" placeholder="Type here" type="text" value=""> <span> 777 / 777 Remaining </span> </div>
 		</div>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-		<p><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['0.7239919868247222']=[this,'AppRouteComponent','home']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;0.7239919868247222&quot;]').instances.get('0.7239919868247222').onClick(event,)">/</a></p>
+		<p><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','home']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">/</a></p>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
