--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -12,14 +12,14 @@
 <body>
 	<nav>
 		<ul>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','error404','Go error404']"></script><a href="/404.html" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go error404</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','home','Go home']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go home</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','homeJump1','Go homeJump1']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go homeJump1</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','homeJump2','Go homeJump2']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go homeJump2</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','ssgNo','Go ssgNo']"></script><a href="/ssg/no" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgNo</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','ssgYes','Go ssgYes']"></script><a href="/ssg/yes" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYes</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','ssgYesJump1','Go ssgYesJump1']"></script><a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYesJump1</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','ssgYesJump2','Go ssgYesJump2']"></script><a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYesJump2</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"error404","txt":"Go error404"}*/</script><a href="/404.html" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go error404</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"home","txt":"Go home"}*/</script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go home</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"homeJump1","txt":"Go homeJump1"}*/</script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go homeJump1</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"homeJump2","txt":"Go homeJump2"}*/</script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go homeJump2</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"ssgNo","txt":"Go ssgNo"}*/</script><a href="/ssg/no" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgNo</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"ssgYes","txt":"Go ssgYes"}*/</script><a href="/ssg/yes" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYes</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"ssgYesJump1","txt":"Go ssgYesJump1"}*/</script><a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYesJump1</a></li>
+			<li><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"ssgYesJump2","txt":"Go ssgYesJump2"}*/</script><a href="/ssg/yes/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
@@ -27,15 +27,15 @@
 		<div id="jump1">Jump 1</div>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
-		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'Textbox',10,'foo']"></script>
-			<div> <input oninput="this.closest('[data-Textbox=&quot;/UID/&quot;]').instances.get('/UID/').handleInput(event,)" maxlength="10" placeholder="Type here" type="text" value="foo"> <span> 7 / 10 Remaining </span> </div>
+		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'Textbox']">/*{"maxlength":10,"value":"foo"}*/</script>
+			<div> <input oninput="this.closest('[data-Textbox=&quot;/UID/&quot;]').instances.get('/UID/').handleInput(event,)" placeholder="Type here" type="text" maxlength="10" value="foo"> <span> 7 / 10 Remaining </span> </div>
 		</div>
-		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'Textbox',777]"></script>
-			<div> <input oninput="this.closest('[data-Textbox=&quot;/UID/&quot;]').instances.get('/UID/').handleInput(event,)" maxlength="777" placeholder="Type here" type="text" value=""> <span> 777 / 777 Remaining </span> </div>
+		<div><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'Textbox']">/*{"maxlength":777}*/</script>
+			<div> <input oninput="this.closest('[data-Textbox=&quot;/UID/&quot;]').instances.get('/UID/').handleInput(event,)" placeholder="Type here" type="text" maxlength="777"> <span> 777 / 777 Remaining </span> </div>
 		</div>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-		<p><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent','home']"></script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">/</a></p>
+		<p><script src="data:text/javascript," onload="window.Component=window.Component||{};window.Component['/UID/']=[this,'AppRouteComponent']">/*{"to":"home"}*/</script><a href="/" onclick="this.closest('[data-AppRouteComponent=&quot;/UID/&quot;]').instances.get('/UID/').onClick(event,)">/</a></p>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
